fix card alignment

--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,11 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  margin: 20px auto;
+  padding: 10px;
+  margin: 20px;
   width: 250px;
+  height: 380px;
   box-sizing: border-box;
   background: white;
   border-radius: 10px;
@@ -75,12 +75,10 @@ button {
 .event-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
   justify-content: flex-start;
-  padding: 10px;
-  width: 91%;
-  margin: 0 auto;
+  width: 100%;
 }
+
 
 .header {
   display: flex;
@@ -114,8 +112,9 @@ button {
   flex-wrap: wrap;
   gap: 10px;
   flex: 1;
-  min-width: 200px;
-  justify-content: flex-end;
+  width: 90vw;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-search input,
